--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -160,7 +160,7 @@ body{
         }
         
         &[data-state="slide-open"]{
-            overflow: visible;
+            overflow: hidden;
         }
         
     } // .site-wrapper
